fixed compilation error